test/fixtures/expected-simple-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-ingress-httproute
  namespace: default
spec:
  parentRefs:
  - name: gateway-nginx
  hostnames:
  - "app.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    timeouts:
      request: 600s
      backendRequest: 600s
    backendRefs:
    - name: app-service
      port: 80
      weight: 1
